fix jdk17